# rd-knowledge-sample

./: .bedrock_agentcore.yaml  .gitignore  .gitmodules  GRAPHITI_INTEGRATION_DESIGN.md  MEMORY_ARCHITECTURE_DESIGN.md  README.md  RESEARCH_AGENT_MEMORY_SYSTEMS.md  TASKS.csv  agentcore.yaml  amplify  amplify.yml  docker-compose.local.yml  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tailwind.config.ts  tsconfig.json  vitest.config.mts  vitest.config.ts
.github/workflows/: amplify-deploy.yml  ci.yml
amplify/: backend.ts  package.json
amplify/auth/: resource.ts
amplify/data/: resource.ts
app/: amplify_outputs.json  globals.css  layout.tsx  package.json  page.tsx
app/amplify/: backend.ts
app/components/: ConfigureAmplify.tsx  ServiceCard.tsx
app/lib/: amplify-config.ts
app/providers/: AmplifyProvider.tsx
docs/: AGENTCORE_DEPLOYMENT.md  AMPLIFY_HOSTING_SETUP.md  APPSYNC_MIGRATION_DESIGN.md  ARCHITECTURE_DESIGN.md  BUSINESS_REQUIREMENTS.md  COMPLETION_REPORT.md  ENVIRONMENT_COMPARISON.md  IAM_POLICIES.md  MULTIMODAL_DESIGN.md  NEO4J_AURADB_DESIGN.md  TASKS.csv  VOICE_DIALOGUE_DESIGN.md
docs/design/: 00-ARCHITECTURE-SUMMARY.md  01-RDRA-REQUIREMENTS.md  02-DDD-DOMAIN-MODEL.md  03-EVENT-STORMING.md  04-CLEAN-ARCHITECTURE.md  05-FSD-ATOMIC-DESIGN.md  06-TDD-STRATEGY.md  07-MICROSERVICES-IMPLEMENTATION.md
e2e/: memory.spec.ts  multimodal.spec.ts  voice.spec.ts
infra/: README.md  cdk.json  iam-policies.md  package-lock.json  package.json  tsconfig.json
infra/cdk.out/: RdKnowledge-Compute-dev.assets.json  RdKnowledge-Compute-dev.template.json  (+6 more)
scripts/: setup-neo4j-auradb.sh  test-neo4j-connection.py
services/: __init__.py
shared/: __init__.py
src/: 00_verify_availability.py  01_s3_vectors_direct.py  02_bedrock_kb_with_s3vectors.py  03_bedrock_kb_with_opensearch.py  04_comparison.py  05_agentcore_memory.py  __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_graph_store.py  test_integration.py  test_knowledge_base.py  test_memory_store.py  test_multimodal.py  test_vector_store.py  test_voice.py
(+141 files in other folders)
