[project]
name = "rd-knowledge-sample"
version = "0.1.0"
description = "Sample project to verify S3 Vectors vs Bedrock Knowledge Bases APIs"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"


