[project]
name = "rd-knowledge-sample"
version = "0.1.0"
description = "AWS Nova シリーズ導入のための技術検証プロジェクト"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AEZ Inc." }]

dependencies = [
    # AWS SDK
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    
    # StrandsAgents + AgentCore (Agentic AI 基盤)
    "strands-agents>=1.0.0",
    "strands-agents-tools>=0.1.0",
    
    # Graph Database (Neo4j)
    "neo4j>=5.0.0",
    "networkx>=3.0.0",
    
    # Vector Store (Local)
    "chromadb>=0.5.0",
    
    # LLM (Local)
    "ollama>=0.3.0",
    
    # Database (Local)
    "redis>=5.0.0",
    
    # HTTP Client
    "httpx>=0.27.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
